fix(eek): fixed eek alignment by getting exact height

--- a/src/less/eek/base/eek.less
+++ b/src/less/eek/base/eek.less
@@ -1,5 +1,7 @@
+@eek-arrow-size: sqrt(pow(28px, 2) / 2); // Calculate hypotenuse of a 28px square (for rotation)
+
 .eek {
-    align-items: center;
+    align-items: stretch;
     display: inline-flex;
     font-family: @font-family-default;
     font-weight: 700;
@@ -16,7 +18,6 @@
 }
 
 .eek__arrow {
-    height: 28px;
     overflow: hidden;
     width: 17px;
 }
@@ -26,12 +27,12 @@
     border-radius: 2px;
     content: "";
     display: block;
-    height: 19px;
-    left: -10px;
+    height: @eek-arrow-size;
+    margin-top: 2.3px;
     position: relative;
-    top: 3.5px; // 3.5 because border is .5 width
+    right: 12px;
     transform: rotate(45deg);
-    width: 19px;
+    width: @eek-arrow-size;
 }
 
 .eek--rating-1 .eek__container,
